# CS100-Final-Project

./: .gitignore  CMakeLists.txt  README.md  lists_test.hpp  listscomposite.cpp  listscomposite.hpp  main.cpp  menu.cpp  menu.hpp  menu_test.hpp  print_test.hpp  printliststrat.cpp  printliststrat.hpp  printstrat.hpp  printtaskstrat.cpp  printtaskstrat.hpp  tasks_test.hpp  taskscomposite.cpp  taskscomposite.hpp  tasktemplate.cpp  tasktemplate.hpp  unit_tests.cpp
